feat(runtime): support optional Compose profiles
